Fix dialog scrollbars (#424)
* fix dialog scrollbars

* remove dialog fixed top offset

* move dialog scrollbar position to right

* remove override

* remove outdated overrides

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -511,10 +511,14 @@ $button-custom-shadow: -1px -1px 5px rgba(0, 0, 0, 0.05), 1px 1px 5px rgba(0, 0,
   font-weight: 600;
 }
 
-@mixin scrollbar {
+@mixin scrollbar ($marginOffset: 0) {
   &.el-scrollbar {
+    margin-left: $marginOffset;
+    margin-right: $marginOffset;
+
     .el-scrollbar__wrap {
       overflow-x: hidden;
+      margin-bottom: 0px !important; // to disable element-ui negative margin
     }
     .el-scrollbar__wrap, .el-scrollbar__view {
       display: flex;
